Extra: Add swagger-autogen for doc generation
